--- a/templates/backup.sh.erb
+++ b/templates/backup.sh.erb
@@ -7,14 +7,18 @@ SRC="<%= scope.lookupvar('src_user') %>@<%= scope.lookupvar('src_host') %>"
 
 PATH=<%= scope.lookupvar('bontmia::prefix') %>/<%= scope.lookupvar('bontmia::params::install_dir') %>:$PATH
 
-echo "=== Start time: `date` ==="
-echo
+LOGFILE="<%= scope.lookupvar('bontmia::params::logdir') %>/<%= scope.lookupvar('basename') %>.log"
+
+echo "=== Start time: `date` ===" | tee -a $LOGFILE
+echo                              | tee -a $LOGFILE
 
 bontmia --dest $DEST <% if scope.lookupvar('bontmia::sudo') -%>--sudo<% end %> \
         --port <%= scope.lookupvar('src_port') %>  \
         --rotation 0minutes0hours<%= scope.lookupvar('rotation_days') %>days<%= scope.lookupvar('rotation_weeks') %>weeks<%= scope.lookupvar('rotation_months') %>month<%= scope.lookupvar('rotation_years') %>years \
         <% scope.lookupvar('src_dir').each do |dir| -%>$SRC:<%= dir %> <% end -%>\
-        | tee <%= scope.lookupvar('bontmia::params::logdir') %>/<%= scope.lookupvar('basename') %>.log
+                                  | tee -a $LOGFILE
 
-echo
-echo "=== End time: `date` ==="
+echo                              | tee -a $LOGFILE
+echo "=== End time: `date` ==="   | tee -a $LOGFILE
+echo                              | tee -a $LOGFILE
+
