[bontmia] Switch to bontmia 0.17, remove the old hacks

--- a/templates/backup.sh.erb
+++ b/templates/backup.sh.erb
@@ -13,7 +13,7 @@ echo "=== Start time: `date` ===" | tee -a $LOGFILE
 echo                              | tee -a $LOGFILE
 
 bontmia --dest $DEST <% if scope.lookupvar('bontmia::sudo') -%>--sudo<% end %> \
-        --port <%= scope.lookupvar('src_port') %>  \
+        --port <%= scope.lookupvar('src_port') %> --cipher arcfour \
         --rotation 0minutes0hours<%= scope.lookupvar('rotation_days') %>days<%= scope.lookupvar('rotation_weeks') %>weeks<%= scope.lookupvar('rotation_months') %>month<%= scope.lookupvar('rotation_years') %>years \
         <% scope.lookupvar('src_dir').each do |dir| -%>$SRC:<%= dir %> <% end -%>\
                                   | tee -a $LOGFILE
