--- a/templates/backup.sh.erb
+++ b/templates/backup.sh.erb
@@ -19,7 +19,8 @@ echo                              | tee -a $LOGFILE
 bontmia --dest $DEST <% if scope.lookupvar('bontmia::sudo') -%>--sudo<% end %> \
 <% if ! scope.lookupvar('src_host').empty? -%>         --port <%= scope.lookupvar('src_port') %> --cipher <%= scope.lookupvar('ssh_cipher') %> \
 <% end -%>
-        --rotation 0minutes0hours<%= scope.lookupvar('rotation_days') %>days<%= scope.lookupvar('rotation_weeks') %>weeks<%= scope.lookupvar('rotation_months') %>month<%= scope.lookupvar('rotation_years') %>years \
+<% if scope.lookupvar('rotation') -%>        --rotation 0minutes0hours<%= scope.lookupvar('rotation_days') %>days<%= scope.lookupvar('rotation_weeks') %>weeks<%= scope.lookupvar('rotation_months') %>month<%= scope.lookupvar('rotation_years') %>years \
+<% end -%>
         <% scope.lookupvar('src_dir_array').each do |dir| -%>$SRC<%= dir %> <% end -%>\
                                   | tee -a $LOGFILE
 
